@@ -22,7 +22,7 @@
   *  - Master LUFA include file rather than per-module includes
   *  - Change makefiles to allow for absolute LUFA location to be used
   *  - Abstract out the physical media from the Mass Storage device demos
-  *  - Add MIDI Host Class driver
+  *  - Add RNDIS Host Class driver
   *  - Make new demos
   *      -# Multiple-report HID device
   *      -# Mouse/CDC Dual Class Device
